# MobileRobot

Homework_3/: README.txt  planner.py
Homework_3/result/: goalFinding.csv
exercise2/: CMakeLists.txt  package.xml
exercise2/src/: README.TXT  drawmap.py
exercise3/: CMakeLists.txt  package.xml
exercise3/launch/: runRobot.launch
exercise3/src/: README.txt  goal.txt  lapmap.yaml  point.txt  point.txt~  report.txt  run.py  run.py~
exercises1/: CMakeLists.txt  README.txt  REPORT.txt  package.xml
exercises1/launch/: driver.launch~  stopper.launch  stopper.launch~
exercises1/src/: goToPose.py  move.py  tele.py
final_project/: CMakeLists.txt  README.txt~  package.xml
final_project/src/: .~lock.People.csv#  People.csv  faceDetection.py  keyBoard.py  move.py  moving.py  moving2.py  moving3.py  moving3.py~  readData.py  readLetter.py
hw3/: MCL.py  Makov.py  README.txt  corridor.py
hw4/: README.txt  report.txt
hw4/map/: lapmap2.yaml
hw4/src/: moving2.py
hw5/: planner.py
